# autointake

./: .cursorrules  .gitignore  PLAN.md  README.md  main.py  project_requirements.md  pyproject.toml  test_intake.py
autointake/: alembic.ini  main.py
autointake/alembic/: env.py
autointake/alembic/versions/: 6193346c5153_create_initial_tables.py  a89a172add95_add_system_settings_table.py  b2654a3a9f3c_add_detailed_intake_process_fields_and_.py
autointake/app/: celery_app.py  crud.py  database.py  main.py  models.py  schemas.py
autointake/app/services/: sms_service.py
autointake/app/tasks/: intake_tasks.py
autointake/app/templates/: admin.html
evals/: main_eval.py  scenario_1_new_intake.py  scenario_2_all_docs_complete.py  scenario_3_non_pi.py  scenario_4_escalation.py
