[project]
name = "autointake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "alembic>=1.16.2",
]

[project.scripts]
start = "uvicorn main:app --reload"
test = "python test_intake.py"
